--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env export NODE_ENV=development nodemon start.js",
-    "start:prod": "cross-env export NODE_ENV=production nodemon start.js"
+    "start": "cross-env NODE_ENV=development nodemon start.js",
+    "start:prod": "cross-env NODE_ENV=production nodemon start.js"
   },
   "author": "",
   "license": "ISC",
